@@ -457,6 +457,10 @@ fi
 #Allow us to test for atkmm support in Makefile.am files:
 AM_CONDITIONAL(GTKMM_ATKMM_ENABLED, test "x$gtkmm_enable_api_atkmm" = "xyes")
 
+
+GTKMM_ARG_ENABLE_API_MAEMO_EXTENSIONS()
+
+
 AC_ARG_ENABLE(docs, [AC_HELP_STRING([--enable-docs],
               [build the included docs [default=yes]])],,
                         [enable_docs=yes])
