@@ -8,6 +8,10 @@
 #undef GTKMM_MINOR_VERSION
 #undef GTKMM_MICRO_VERSION
 
+#undef GTKMM_ATKMM_ENABLED
+#undef GTKMM_MAEMO_EXTENSIONS_ENABLED
+
+
 #ifdef GLIBMM_CONFIGURE
 /* compiler feature tests that are used during compile time and run-time
    by gtkmm only. */
@@ -22,9 +26,8 @@
 #undef HAVE_MKFIFO
 #undef GETC_UNLOCKED
 
-#undef GTKMM_ATKMM_ENABLED
-
 #endif /* GLIBMM_CONFIGURE */
+
 
 #ifdef GLIBMM_DLL
   #if defined(GTKMM_BUILD) && defined(_WINDLL)
