@@ -18326,7 +18326,35 @@
 
 ;; From gtk+/gtk/gtkquartz.h
 
+(define-method set_can_paste_rich_text
+  (of-object "GtkTextBuffer")
+  (c-name "gtk_text_buffer_set_can_paste_rich_text")
+  (return-type "none")
+  (parameters
+    '("gboolean" "can_paste_rich_text")
+  )
+)
 
+(define-method get_can_paste_rich_text
+  (of-object "GtkTextBuffer")
+  (c-name "gtk_text_buffer_get_can_paste_rich_text")
+  (return-type "gboolean")
+)
+
+(define-method set_rich_text_format
+  (of-object "GtkTextBuffer")
+  (c-name "gtk_text_buffer_set_rich_text_format")
+  (return-type "none")
+  (parameters
+    '("const-gchar*" "format")
+  )
+)
+
+(define-method get_rich_text_format
+  (of-object "GtkTextBuffer")
+  (c-name "gtk_text_buffer_get_rich_text_format")
+  (return-type "const-gchar*")
+)
 
 ;; From gtk+/gtk/gtkradioaction.h
 
