@@ -589,5 +589,12 @@ Glib::ustring TextBuffer::register_deserialize_format(const Glib::ustring& mime_
 }
 */
 
+#ifdef GTKMM_MAEMO_EXTENSIONS_ENABLED
+void TextBuffer::set_rich_text_format_all()
+{
+  gtk_text_buffer_set_rich_text_format(gobj(), NULL);
+}
+#endif //GTKMM_MAEMO_EXTENSIONS_ENABLED
+
 } // namespace Gtk
 
